spacing fixes

--- a/src/web/controls/Controls.css
+++ b/src/web/controls/Controls.css
@@ -41,3 +41,18 @@
   display: block;
   margin: 0 auto;
 }
+
+/* Search component specific styling */
+.controls > div > label {
+  display: block;
+  margin-bottom: 0.5em;
+}
+
+.controls > div > input[type="search"] {
+  margin-top: 0;
+}
+
+/* Character filter specific styling */
+.controls > div > select {
+  margin-top: 0;
+}
